# SpaceMerchant

./: README.md  main.py  pyproject.toml
spacemerchants/: __init__.py  constants.py  spacemerchant.py
spacemerchants/models/: __init__.py  agent.py  faction.py  ship.py  system.py  waypoint.py
spacetradercore/: constants.py  rate_limit.py  spacemerchantcore.py
tests/: SpaceMerchants_test.py  agent_test.py
